[gd_scene load_steps=7 format=2]

[ext_resource path="res://settings.gd" type="Script" id=1]
[ext_resource path="res://Fonts/GeostarFill-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Music/Jason-Shaw-RUNNING-WATERS.wav" type="AudioStream" id=3]
[ext_resource path="res://Menu_Sprite.jpg" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
extra_spacing_char = 3
font_data = ExtResource( 2 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -95.0
margin_right = 996.0
margin_bottom = 96.0

[node name="music_level" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 946.0
margin_bottom = 59.0

[node name="music" type="Label" parent="VBoxContainer/music_level"]
margin_right = 617.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "MUSIC VOLUME "

[node name="m_slider" type="HSlider" parent="VBoxContainer/music_level"]
margin_left = 621.0
margin_right = 845.0
margin_bottom = 59.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
step = 0.5
value = -25.0

[node name="m_vol" type="Label" parent="VBoxContainer/music_level"]
margin_left = 849.0
margin_right = 946.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "50"

[node name="fx_level" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 946.0
margin_bottom = 122.0

[node name="fx" type="Label" parent="VBoxContainer/fx_level"]
margin_right = 623.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "FX VOLUME           "

[node name="fx_slider" type="HSlider" parent="VBoxContainer/fx_level"]
margin_left = 627.0
margin_right = 845.0
margin_bottom = 59.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
step = 0.5
value = -25.0
ticks_on_borders = true

[node name="fx_vol" type="Label" parent="VBoxContainer/fx_level"]
margin_left = 849.0
margin_right = 946.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "50"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 946.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 2 )
text = "BACK"

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Menu_Sprite" type="Sprite" parent="."]
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
position = Vector2( 960, 540 )
z_index = -1
texture = ExtResource( 4 )
[connection signal="value_changed" from="VBoxContainer/music_level/m_slider" to="." method="_on_m_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/fx_level/fx_slider" to="." method="_on_fx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
